left part is done

--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Sign-up form</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main">
+      <div class="left">
+        <div class="logo">
+          <img src="/img/icon.png" alt="Icon.png" class="icon" />
+          <p>Save Soil Campaign</p>
+        </div>
+        <div class="credit">
+          Pic Credit:
+          <a href="https://unsplash.com/@gabrielj_photography">gabrielj</a>
+        </div>
+      </div>
+      <div class="right">
+        <p class="description">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
+          cupiditate nisi neque vero magni dolore qui est ipsum quisquam quidem
+          totam numquam minima iste architecto ab, illum repudiandae velit? Non
+          ipsum eligendi quam autem dolorum pariatur unde itaque suscipit dicta!
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
