--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="left">
         <div class="logo">
           <img src="/img/icon.png" alt="Icon.png" class="icon" />
-          <p>Save Soil Campaign</p>
+          <p>Save Soil Movement</p>
         </div>
         <div class="credit">
           Pic Credit:
@@ -21,12 +21,54 @@
         </div>
       </div>
       <div class="right">
-        <p class="description">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
-          cupiditate nisi neque vero magni dolore qui est ipsum quisquam quidem
-          totam numquam minima iste architecto ab, illum repudiandae velit? Non
-          ipsum eligendi quam autem dolorum pariatur unde itaque suscipit dicta!
-        </p>
+        <div class="top">
+          <p>
+            The Movement is urging nations across the world to urgently
+            legislate to save the planet's agricultural soils, 50% of which are
+            already said to be degraded and incapable of yield.
+          </p>
+        </div>
+        <div class="middle">
+          <p>Sign Up to join the Movement!</p>
+          <form action="#" method="post">
+            <div>
+              <label for="name">FIRST NAME</label><br />
+              <input type="text" id="name" required />
+            </div>
+            <div>
+              <label for="lname">LAST NAME</label><br />
+              <input type="text" id="lname" />
+            </div>
+            <div>
+              <label for="email">EMAIL</label><br />
+              <input type="email" id="email" required />
+            </div>
+            <div>
+              <label for="mnumber">PHONE NUMBER</label><br />
+              <input
+                type="tel"
+                id="mnumber"
+                minlength="10"
+                maxlength="10"
+                required
+              />
+            </div>
+            <div>
+              <label for="password">PASSWORD</label><br />
+              <input type="password" id="password" required />
+            </div>
+            <div>
+              <label for="pass">CONFIRM PASSWORD</label><br />
+              <input type="password" id="pass" required />
+            </div>
+          </form>
+        </div>
+        <div class="bottom">
+          <div class="btn">
+            <button type="submit">Submit</button>
+            <p>Already Have an Account? <a href="#">Login</a></p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
