Password validator added Project completed

--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
             <div>
               <label for="password">PASSWORD</label><br />
               <input type="password" id="password" required />
+              <p class="alert0"></p>
             </div>
             <div>
               <label for="pass">CONFIRM PASSWORD</label><br />
-              <input type="password" id="pass" required />
+              <input type="password" id="cPass" required />
+              <p class="alert1"></p>
             </div>
           </form>
         </div>
@@ -71,5 +73,6 @@
         </div>
       </div>
     </div>
+    <script src="/script/script.js"></script>
   </body>
 </html>
